--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <title>Qr code generator</title>
 </head>
 <body>
-  <div class="wrapper">
+
+  <h1>This is a test branch</h1>
+  
+<!--   <div class="wrapper">
     <div class="card">
       <h1>Qr code generator</h1>
       <form id="form">
@@ -18,6 +21,6 @@
       </div>
     </div>
   </div>
-  <script src="./main.js"></script>
+  <script src="./main.js"></script> -->
 </body>
 </html>
